<resources>
  <string name="app_name">PawMance</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="log_in_with_phone_number">Log in with phone number</string>
  <string name="phone_verification">When you tap Continue. Pawmance will send a text with verification code. Message and data rates may apply. The verified phone number can be used to Login. <b> Learn what happens when your number changes. </b></string>
  <string name="login_by_email"><u>LOGIN BY EMAIL</u></string>
  <string name="change_your_phone_number">Change your phone number?</string>
  <string name="continue_text_button">Continue</string>
  <string name="terms_conditions">By tapping Log in, you agree with our Terms of Services and Privacy Policy.</string>
  <string name="trouble_logging_in">Trouble Logging in?</string>
  <string name="breed">Breed</string>
  <string name="i_m_a">I\'m a</string>
  <string name="first_name">First Name</string>
  <string name="pet_name">Pet Name</string>
  <string name="year">Year</string>
  <string name="month">Month</string>
  <string name="day">Day</string>
  <string name="pet_gender">Pet Gender</string>
  <string name="female">FEMALE</string>
  <string name="male">MALE</string>
  <string name="my_location_is_in">My Location is in</string>
  <string name="enter_location">Enter location</string>
  <string name="pet_birthday">Pet Birthday</string>
  <string name="mobile_number">(+63) Mobile Number</string>
  <string name="my_number_is">My Number is</string>
  <string name="verify">Verify</string>
  <string name="verify_phone_nnumber">Verify phone\nnumber</string>
  <string name="didn_t_received_sms">Didn\'t received SMS?</string>
  <string name="resend_code">Resend Code</string>
  <string name="sms_verification_message">Check your SMS messages. We\'ve sent you the verification code at <![CDATA[<b>%1$s</b>]]>.</string>
  <string name="add">Add +</string>
  <string name="add_pet_photos">Add Pet Photos</string>

  <string name="permission_message">To enjoy the full features of the app, Pawmance needs access to:\n\n• Camera\n• Storage &amp; Media\n• Location</string>
  <string name="request_permission">Request Permissions</string>
  <string name="allow_permission">Allow</string>

  <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
  <string name="pet_preference_s">Pet Preference</string>
  <string name="dog_breed">Dog Breed</string>
  <string name="pure_breed">Pure Breed</string>
  <string name="rescue">Rescue</string>
  <string name="mix">Mix</string>
  <string name="without_papers">Without Papers</string>
  <string name="with_papers">With Papers</string>
  <string name="it_s_a_match">It\'s a MATCH!</string>
  <string name="send_a_message">Send a message</string>
  <string name="go_back_on_swiping">Go back on swiping</string>
  <string name="add_photo">Add Photo</string>
  <string name="settings">Settings</string>
  <string name="edit_info">Edit Info</string>
  <string name="rewind">Rewind</string>
  <string name="change_location_settings">Change Location Settings</string>
  <string name="pet_progress">Pet Progress</string>
  <string name="update_status">Update status</string>
  <string name="add_pet_progress">Add Pet Progress</string>
  <string name="enter_pet_progress">Add your current pet progress</string>
  <string name="you_have_liked_each_other">You and %1$s have liked each other.</string>
  <string name="pet_progress_message">Tip: Update your pet progress after 25 days to keep track your pet changes.</string>
  <string name="chats">Chats</string>
  <string name="write_your_message">Write your message</string>
  <string name="account_settings">Account Settings</string>
  <string name="phone_number">Phone Number</string>
  <string name="legal">Legal</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="terms_of_service">Terms of Service</string>
  <string name="registered_id">Registered ID</string>
  <string name="not_available">Not available</string>
  <string name="delete_my_account">Delete my account</string>
  <string name="log_out">Log out</string>
  <string name="update_profile">Update Profile</string>
  <string name="logging_simulation">Logging Simulation</string>
  <string name="show_simulation_logs">Show simulation logs</string>
  <string name="current_location">Current Location</string>
  <string name="preference">Preference</string>
  <string name="my_birthdate">My Birthdate</string>
  <string name="gender">Gender</string>
  <string name="mating_date">Date mated: %1$s</string>
  <string name="update_mating_date">Update mating date</string>
  <string name="common_symptoms">Common Symptoms</string>
</resources>