<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="dev.apes.pawmance.ui.registration.PhoneRegistrationViewModel" />
    </data>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/my_number_is"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/mobile_number"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/change_your_phone_number"
                style="@style/TextBody1Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_your_phone_number" />

            <TextView
                android:id="@+id/login_by_email"
                style="@style/TextBody1Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/login_by_email"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/data_rates"
                style="@style/TextBody1Style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/change_your_phone_number"
                android:layout_marginTop="16dp"
                android:text="@string/phone_verification" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{viewModel.isEnabled}"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/continue_text_button"
            android:textAppearance="@style/TextButtonStyle" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

</FrameLayout>
</layout>