<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/my_location_is_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:hint="@string/enter_location"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/enter_location_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:enabled="false"
        android:textAppearance="@style/TextButtonStyle"
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_marginTop="36dp"
        android:layout_height="wrap_content"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:text="@string/continue_text_button" />

</LinearLayout>