<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="dev.forcecodes.pawmance.ui.pet.PetNameViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:orientation="vertical"
        android:layout_width="0dp"
        app:layout_constraintGuide_percent="0.5"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/title_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/pet_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pet_name_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        android:layout_marginTop="24dp"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:hint="@string/first_name"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pet_name_edit_text"
            android:text="@{viewModel.petNameFlow}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/im_a"
        app:layout_constraintTop_toBottomOf="@id/pet_name_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/i_m_a" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/breed_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/im_a"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_center"
        android:hint="@string/breed"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:text="@{viewModel.breedNameFlow}"
            android:inputType="textAutoComplete"
            android:id="@+id/breed_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:enabled="@{viewModel.enableSubmit}"
        android:onClick="@{(v) -> viewModel.onContinueClick()}"
        app:layout_constraintTop_toBottomOf="@id/breed_text_layout"
        android:textAppearance="@style/TextButtonStyle"
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:text="@string/continue_text_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>