<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/black">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/add_pet_progress" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/enter_pet_progress"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            app:hintEnabled="false"
            app:expandedHintEnabled="false"
            app:helperTextEnabled="false"
            app:boxCollapsedPaddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/progress_edit_text"
                android:maxLines="8"
                android:fontFamily="@font/product_sans_regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/pet_progress_message"
            android:textColor="@color/black" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentBottom="true"
        android:id="@+id/update_status_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/update_status"
        android:textAppearance="@style/TextButtonStyle" />

</RelativeLayout>