<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginBottom="24dp"
        android:id="@+id/pet_birthday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/pet_gender" />

    <com.google.android.material.card.MaterialCardView
        style="@style/SelectableView"
        android:id="@+id/female_gender"
        app:cardCornerRadius="0dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/pet_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:fontFamily="@font/product_sans_regular"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:background="@android:color/transparent"
            android:clickable="false"
            android:id="@+id/female_radio"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/SelectableView"
        android:id="@+id/male_gender"
        app:cardCornerRadius="0dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/female_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:fontFamily="@font/product_sans_regular"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:background="@android:color/transparent"
            android:clickable="false"
            android:id="@+id/male_radio"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAppearance="@style/TextButtonStyle"
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:text="@string/continue_text_button" />

</androidx.constraintlayout.widget.ConstraintLayout>