<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Widget.MaterialComponents.Toolbar.Surface"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/black">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/product_sans_bold"
            android:gravity="center_vertical"
            android:text="@string/settings" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/account_settings"
                android:textColor="@color/black" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/phone_number"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/product_sans_regular"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/black" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="Email"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/product_sans_regular"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/black" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/registered_id"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/registered_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/product_sans_regular"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/black" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.3"
                android:background="@color/cardview_dark_background" />

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="Discovery"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/product_sans_regular"
                android:paddingTop="8dp"
                android:paddingBottom="2dp"
                android:text="Maximum Distance"
                android:textColor="@color/black" />

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:value="35"
                    android:valueFrom="10"
                    android:valueTo="100" />

                <TextView
                    android:id="@+id/desired_distance"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="@color/black" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.3"
                android:background="@color/cardview_dark_background" />

            <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/legal"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                android:focusable="true"
                android:gravity="center_vertical"
                android:fontFamily="@font/product_sans_regular"
                android:foreground="?selectableItemBackground"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/black"
                app:drawableTint="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
                android:focusable="true"
                android:fontFamily="@font/product_sans_regular"
                android:foreground="?selectableItemBackground"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/terms_of_service"
                android:textColor="@color/black"
                app:drawableTint="@color/black" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/product_sans_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/log_out" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/product_sans_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/delete_my_account"
            android:textColor="@color/red" />
    </LinearLayout>

</LinearLayout>